# Cosmic-Coder-

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile.prover  README.md  SETUP.md  index.html  package-lock.json  package.json  render.yaml  vite.config.js  xp-server.js
.github/workflows/: deploy-pages.yml  deploy.yml
circuits/: GameRun.circom  GameRunV2.circom  PoseidonHash.circom  SkillProof.circom  build_GameRunV2.sh  input.json.example  pot12_0001.ptau
circuits/noir/: Nargo.toml
contracts/: Cargo.toml  README.md
contracts/application/: Cargo.toml
contracts/application/src/: lib.rs
contracts/cosmic_coder/: Cargo.toml
contracts/cosmic_coder/src/: lib.rs  tests.rs
contracts/groth16_verifier/: Cargo.toml  README.md
contracts/groth16_verifier/src/: lib.rs  test.rs
contracts/policy/: Cargo.toml
contracts/policy/src/: lib.rs
contracts/shadow_ascension/: Cargo.toml
contracts/shadow_ascension/src/: lib.rs  tests.rs
contracts/ultrahonk_verifier/: Cargo.toml
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
contracts/zk_types/: Cargo.toml
docs/: COSMIC_CODER_GUIDE.md  COSMIC_CODER_GUIDE_en.md  COSMIC_CODER_GUIDE_es.md  DEPLOY_GITHUB_IO.md  DEPLOY_PROVER.md  DEPLOY_RENDER_SEP10.md  DEPLOY_ZK_STEPS.md  E2E_VERIFICATION.md  HACKATHON_DO_THIS.md  HACKATHON_REMAINING.md  RANKED_ZK_SYSTEM_en.md  SEP10_AUTH.md  SESSION-LOG.md  STELLAR_ZK_REFERENCE.md  SUPABASE_COSMIC_CODER_SETUP.md  TECHNICAL_DOCUMENTATION.md  ZK_AND_BALANCE.md  ZK_REAL_SETUP.md  index.html
docs/app/: main.js  style.css
docs/plans/: 2026-01-15-vibe-coder-design.md  2026-01-21-electron-desktop-app-design.md
electron/: main.js  preload.js  tray.js
hooks/: codex-hook.sh  cursor-hook.sh  gemini-hook.sh  vibe-coder-hook.sh
public/: browserconfig.xml  config.json  config.json.example  site.webmanifest
public/.well-known/: stellar.toml
public/circuits/: GameRun.json
public/docs/: COSMIC_CODER_GUIDE_en.md  COSMIC_CODER_GUIDE_es.md  DEPLOY_GITHUB_IO.md  DEPLOY_ZK_STEPS.md  E2E_VERIFICATION.md  HACKATHON_COMPLIANCE.md  HOW_IT_WORKS.md  HOW_IT_WORKS_en.md  TECHNICAL_DOCUMENTATION.md  VIBECODER_HACKATHON_en.md  VIBECODER_HACKATHON_es.md  ZK_AND_BALANCE.md  index.html
scripts/: deploy_contracts_testnet.sh  e2e_zk.sh  generate_render_env.js  run_db_schema.js  sep10-login-demo.html  sep10-login-demo.js  start-game-sep10-snippet.js  test-leaderboard-cosmiccoder.js  write_config_from_env.js
scripts/zk/: build_GameRunV2.sh  build_circuit.sh  calculate_poseidon.js  contract_args_from_proof.js  export_for_contract.js  generate_proof.js  generate_proof_v2.js  generate_skill_proof.js  invoke_submit_zk.js  invoke_verify.js  set_verifier_vk.js
server/: index.js  skillProof.js  zkProve.js
server/auth/: challenge.js  token.js
server/config/: sep10.js
server/data/: leaderboard.json
server/db/: leaderboard.js  leaderboardFile.js  pool.js  progress.js  schema.sql  supabase.js  users.js
src/: main.js
tmp/: proof.json  pub_signals.json  vk.json  vk_base64.txt  vk_hex.txt
(+126 files in other folders)
