[package]
name = "cosmic_coder"
version = "0.1.0"
description = "Provably Fair Survival - ZK wave/score proof + Game Hub integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
soroban-sdk = "25.1"
zk_types = { path = "../zk_types" }

[dev-dependencies]
soroban-sdk = { version = "25.1", features = ["testutils"] }
groth16_verifier = { path = "../groth16_verifier" }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"

[profile.release-with-log]
inherits = "release"
strip = "debuginfo"
