[package]
name = "groth16_verifier"
version = "0.1.0"
description = "Groth16 proof verifier (BN254) - cryptography only, no game logic"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "25.1"
zk_types = { path = "../zk_types" }

[dev-dependencies]
soroban-sdk = { version = "25.1", features = ["testutils"] }

[profile.release]
lto = true
opt-level = 3
strip = "symbols"
