[package]
name = "shadow_ascension"
version = "0.1.0"
description = "Provably Fair Survival - ZK wave/score proof + Game Hub integration"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
soroban-sdk = "25.1"

[profile.release]
lto = true
opt-level = 3
strip = "symbols"

[profile.release-with-log]
inherits = "release"
strip = "debuginfo"
